fix(banner): spacing issues

--- a/express/blocks/banner/banner.css
+++ b/express/blocks/banner/banner.css
@@ -29,12 +29,12 @@ main .banner h2, main .banner h3 {
   color: var(--color-white);
 }
 
-main .banner.light h2, main .banner.light h3 {
-  color: var(--color-black);
+main .banner.light h2 {
+  margin-top: 0;
 }
 
-main .banner p.button-container {
-  margin-top: 56px;
+main .banner.light h2, main .banner.light h3 {
+  color: var(--color-black);
 }
 
 main .banner a:any-link {
